<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_background"
    tools:context=".view.MainActivity"
    android:padding="20dp">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playfair_display_italic"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/text"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="fon" />
    <TextView
        android:id="@+id/tvAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tvAgeText"
        android:textColor="@color/black"
        android:textSize="25sp"
        />

    <SeekBar
        android:id="@+id/sbAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:max="120" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/line_shape"/>
    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/text2"
        android:textColor="@color/black"
        android:textSize="25sp"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
    <RadioButton
        android:id="@+id/rbtOui"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:checked="true"
        android:text="@string/rbtOui"
        android:textColor="@color/black"
        android:textSize="20sp" />
        <RadioButton
            android:id="@+id/rbtNon"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/rbtNon"
            android:textColor="@color/black"
            android:textSize="20sp" />
</RadioGroup>
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:hint="Valeur mesurée (en mmol/l)"
        android:inputType="numberDecimal"
        />

    <Button
        android:id="@+id/btnConsulter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"

        android:backgroundTint="@color/grey"
        android:onClick="Calculer"
        android:text="@string/btnConsulter"
        android:textColor="@color/black"
        android:textSize="18sp"
        />


</LinearLayout>